--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="0dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="240dp" />
+        app:layout_constraintGuide_end="491dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -75,7 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="@string/ip_address"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     />
 
@@ -83,18 +83,18 @@
                     android:id="@+id/textViewPortNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="25dp"
                     android:text="@string/port"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/textViewInterface"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="22dp"
+                    android:layout_marginTop="25dp"
                     android:text="@string/network_if"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"/>
 
             </LinearLayout>
@@ -110,7 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:digits="1234567890."
-                    android:ems="10"
+                    android:ems="9"
                     android:hint="@string/hint_ip"
                     android:inputType="number"
                     android:maxLength="15"
@@ -122,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:digits="1234567890"
-                    android:ems="10"
+                    android:ems="9"
                     android:hint="@string/hint_port"
                     android:inputType="number"
                     android:maxLength="5"
@@ -132,7 +132,7 @@
 
                 <Spinner
                     android:id="@+id/spinner"
-                    android:layout_width="210dp"
+                    android:layout_width="190dp"
                     android:layout_height="48dp"
                     android:contentDescription="@string/spinner_desc"/>
 
@@ -143,13 +143,13 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnConn"
                 android:layout_width="150dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:text="@string/conn"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +158,7 @@
             <Button
                 android:id="@+id/btnMute"
                 android:layout_width="150dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:text="@string/unmute"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -187,17 +187,21 @@
         android:layout_height="450dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="10dp"
         android:padding="5dp"
         app:layout_constraintEnd_toStartOf="@id/guideline6"
         app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/split_bar"
-        app:layout_constraintBottom_toTopOf="@id/guideline5">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintHeight="true"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintHeight="true"
+            tools:listitem="@layout/text_item">
+        </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
