--- a/app/src/main/res/layout/text_item.xml
+++ b/app/src/main/res/layout/text_item.xml
@@ -4,6 +4,7 @@
     android:id="@+id/item_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="5dp">
 
     <LinearLayout
@@ -15,42 +16,51 @@
             android:id="@+id/squareBrackets1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text="[ ">
         </TextView>
         <TextView
             android:id="@+id/startTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text="00:00:00.000">
         </TextView>
         <TextView
             android:id="@+id/hyphen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text=" - ">
         </TextView>
         <TextView
             android:id="@+id/endTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text="00:00:00.000">
         </TextView>
         <TextView
             android:id="@+id/squareBrackets2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text=" ]">
         </TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/sttText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:padding="5dp"
+            android:background="@drawable/text_background"
             android:text="안녕하세요.안녕하세요.안녕하세요.">
         </TextView>
-
-
-
     </LinearLayout>
 
 </LinearLayout>
